fix: navbar is stuck at the top

--- a/css/components/sidebar.css
+++ b/css/components/sidebar.css
@@ -13,7 +13,7 @@
 
 .sidebar{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
